<resources>
    <string name="app_name">MemEcho</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="default_web_client_id">43782953494-erv98qldc6sqstsrnr917k39okmoc7nd.apps.googleusercontent.com</string>
    <string name="sign_in_by_google">Sign In By Google</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="username">Username</string>
    <string name="_2h">2h</string>
    <string name="post">Post</string>
    <string name="_100_likes">100 likes</string>
    <string name="love_to_travel_around_the_world">Love to travel around the world</string>
    <string name="following">Following</string>
    <string name="_250">250</string>
    <string name="_25k">25k</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="recover">Recover</string>
    <string name="add_something_about_this_post">Add something about this post</string>
    />
</resources>