<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="#434343"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/username"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_2h"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@id/TextName"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        android:background="#ff0000"
        android:contentDescription="@string/post" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/ic_favorite" />

        <ImageButton
            android:id="@+id/commentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/ic_add_comment" />

        <ImageButton
            android:id="@+id/starButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/ic_star"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repostButton"
            android:layout_margin="8dp"
            android:background="@drawable/ic_share"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exclamationMarkButton"
            android:layout_margin="8dp"
            android:background="@drawable/ic_exclamation"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLikeCount"
        android:text="@string/_100_likes"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>